static: team page changes

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -40,7 +40,7 @@
                                 <span class="int-en">Rachel Buckman</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Sr. Education Associate</span>
+                                <span class="int-en">Sr. Learning & Support Coordinator</span>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <span class="int-en">Caitlyn Cushing</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Development Associate</span>
+                                <span class="int-en">Development Operations Associate</span>
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                                 <span class="int-en">Ephraim Damboritz</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Sr. Managing Engineer</span>
+                                <span class="int-en">Sr. Engineering Specialist</span>
                             </div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                                 <span class="int-en">Hannah Goldberger</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Director of Digital Fundraising & Grants</span>
+                                <span class="int-en">Director of Digital Fundraising</span>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                                 <span class="int-en">Justin Goldstein</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Learning and Engagement Associate</span>
+                                <span class="int-en">Learning Coordinator</span>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                 <span class="int-en">Steve Kaplan</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Content Engineer</span>
+                                <span class="int-en">Software Engineer</span>
                             </div>
                         </div>
                     </div>
@@ -228,14 +228,27 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
-                            <img src="{% static 'img/headshots/nissa.png' %}" alt="Headshot of Nissa Mai-Rose">
+                            <img src="{% static 'img/headshots/nissa.jpg' %}" alt="Headshot of Nissa Mai-Rose">
                         </div>
                         <div class="teamMemberDetails">
                             <div class="teamName">
                                 <span class="int-en">Nissa Mai-Rose</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Software Engineer</span>
+                                <span class="int-en">Sr. Software Engineer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/Amanda_Minsky_Photo.png' %}" alt="Headshot of Amanda Minsky">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Amanda Minsky</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">People & Operations Coordinator</span>
                             </div>
                         </div>
                     </div>
@@ -261,7 +274,7 @@
                                 <span class="int-en">Russel Neiss</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Sr. Product Engineer</span>
+                                <span class="int-en">Product & Engineering Director</span>
                             </div>
                         </div>
                     </div>
@@ -314,7 +327,7 @@
                                 <span class="int-en">Shanee Rosen</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Software Engineer</span>
+                                <span class="int-en">Sr. Software Engineer</span>
                             </div>
                         </div>
                     </div>
@@ -327,7 +340,7 @@
                                 <span class="int-en">Noah Santacruz</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Sr. Research Engineer</span>
+                                <span class="int-en">Sr. Engineering Manager</span>
                             </div>
                         </div>
                     </div>
@@ -379,7 +392,7 @@
                                 <span class="int-en">Israel Tsadok</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education and Engagement Associate (Israel)</span>
+                                <span class="int-en">Learning & Content Coordinator</span>
                             </div>
                         </div>
                     </div>
@@ -431,7 +444,7 @@
                                 <span class="int-en">Hedva Yechieli</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education Coordinator (Israel)</span>
+                                <span class="int-en">Learning & Engagement Coordinator</span>
                             </div>
                         </div>
                     </div>
