--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -24,7 +24,7 @@
                                 <span class="int-he">רחל בקמן</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכזת חינוך בכירה</span>
+                                <span class="int-he">רכזת לימוד ותמיכה בכירה</span>
                             </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                                 <span class="int-he">ג'סטין גולדשטיין</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכז לענייני לימוד וקהילה</span>
+                                <span class="int-he">רכז לענייני לימוד</span>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                 <span class="int-he">אפרים דמבוריץ</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדס תוכנה בכיר וראש צוות</span>
+                                <span class="int-he">מומחה הנדסה בכיר</span>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                 <span class="int-he">חדוה יחיאלי</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכזת חינוך ישראל</span>
+                                <span class="int-he">רכזת חינוך ומעורבות</span>
                             </div>
                         </div>
                     </div>
@@ -234,7 +234,20 @@
                                 <span class="int-he">נסה מאי-רוז</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדסת תוכנה</span>
+                                <span class="int-he">מהנדסת תוכנה בכירה</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/Amanda_Minsky_Photo.png' %}" alt="Headshot of Amanda Minsky">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">אמנדה מינסקי</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">רכזת אנשים ותפעול</span>
                             </div>
                         </div>
                     </div>
@@ -260,7 +273,7 @@
                                 <span class="int-he">רזיאל ניס</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדס מוצר בכיר</span>
+                                <span class="int-he">מנהלת מוצר והנדסה</span>
                             </div>
                         </div>
                     </div>
@@ -273,7 +286,7 @@
                                 <span class="int-he">נח סנטקרוז</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדס מחקר בכיר</span>
+                                <span class="int-he">מנהל הנדסה בכיר</span>
                             </div>
                         </div>
                     </div>
@@ -312,7 +325,7 @@
                                 <span class="int-he">ישראל צדוק</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכז חינוך וקהילה ישראל</span>
+                                <span class="int-he">רכז חינוך ותוכן</span>
                             </div>
                         </div>
                     </div>
@@ -338,7 +351,7 @@
                                 <span class="int-he">קייטלין קושינג</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכזת פיתוח</span>
+                                <span class="int-he">רכזת פיתוח משאבים</span>
                             </div>
                         </div>
                     </div>
@@ -351,7 +364,7 @@
                                 <span class="int-he">סטיב קפלן</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדס תוכן</span>
+                                <span class="int-he">מהנדס תוכנה</span>
                             </div>
                         </div>
                     </div>
@@ -377,7 +390,7 @@
                                 <span class="int-he">שני רוזן</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדסת תוכנה</span>
+                                <span class="int-he">מהנדסת תוכנה בכירה</span>
                             </div>
                         </div>
                     </div>
