--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -205,14 +205,14 @@
                 <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
             </section>
         </section>--->
-        <section class="section department englishOnly">
+        <!-- <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">HR and Operations</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/3e6a7152664e-hr-operations-coordinator-leave-replacement">HR & Operations Coordinator (Leave Replacement)</a></div>
+                <div class="job"><a class="" target="_blank" href=""></a></div>
             </section>
-        </section>
+        </section> -->
         <!---<section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Learning Team</h2>
