static: update hebrew modal content

--- a/templates/messages/2023-3-8-modal-newsletter.html
+++ b/templates/messages/2023-3-8-modal-newsletter.html
@@ -110,8 +110,7 @@
         <p>
                 <span class="int-en">Sign up and be the first to know about new texts, library features, and upcoming events.
                 </span>
-                <span class="int-he">הצטרפו לרשימת התפוצה של ספריא וקבלו את כל העדכונים החשובים: החל מכותרים חדשים במאגר, דרך המלצות קריאה, טיפים לשימוש בספריא ועוד המון ערך.
-                </span>
+                <span class="int-he">הצטרפו לרשימת התפוצה של ספריא וקבלו את כל העדכונים החשובים: תוספות לספרייה, עדכונים טכנולוגיים ואירועים קרובים.</span>
         </p>
 
         <div className="email-input-wrapper">
